# rsgislib

./: .dockerignore  .flake8  CMakeLists.txt  NEWS.md  README.md  README.txt  run_sonar_scanner.sh  run_tests.sh  sonar-project.properties
.circleci/: config.yml
contrib/: pyproject.toml
contrib/arch/: PKGBUILD
contrib/rsgislib_py/: pyproject.toml
contrib/ubuntu/: Dockerfile  README.md  build.sh
doc/: Doxyfile.in  LogicXML.xml  developer_guide.md
doc/dox_files/: index.dox.in
doc/python/: Makefile  run_doc_gen.sh
docker/deb_builder/: README.md
local_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  flip  install_manifest.txt  run_CMAKE.sh
local_build/doc/: Doxyfile
local_build/python/: Makefile  cmake_install.cmake
local_build/src/: Makefile  cmake_install.cmake  librsgis_calib.1.1.0.dylib  librsgis_calib.dylib  librsgis_classify.1.1.0.dylib  librsgis_classify.dylib  (+22 more)
python/: CMakeLists.txt  setup.py
python/rsgislib/: __init__.py
python/rsgislib/changedetect/: __init__.py  imgchngmthds.py  pxl_outlier_chng.py  pxloutlierchng.py
python/rsgislib/classification/: __init__.py  classaccuracymetrics.py  classcatboost.py  classimblearn.py  classimgutils.py  classkeraschips.py  classkeraspxl.py  classlightgbm.py  classratutils.py  classrefpts.py  classsklearn.py  classxgboost.py  clustersklearn.py
python/rsgislib/dataaccess/: __init__.py  copernicus_odata.py  nasa_cmr.py  openstreetmap.py  planet_data_api.py  usgs_m2m.py
python/rsgislib/datacube/: __init__.py  retrievedata.py
python/rsgislib/droneutils/: __init__.py
python/rsgislib/elevation/: __init__.py  roughness.py
python/rsgislib/histocube/: __init__.py
python/rsgislib/imagecalc/: __init__.py  calc_pt_win_smpls.py  calcindices.py  leastcostpath.py  specunmixing.py
python/rsgislib/imagecalc/specunmixing/: __init__.py
python/rsgislib/imagecalibration/: __init__.py  sensorlvl1data.py  sensorlvl2data.py  solarangles.py
python/rsgislib/imagefilter/: __init__.py  tiledfilter.py
python/rsgislib/imagemorphology/: __init__.py
python/rsgislib/imageregistration/: __init__.py
python/rsgislib/imageutils/: __init__.py  imagecomp.py  imagelut.py  stdimgblockiter.py  stdimgblockiterbatches.py  tilingutils.py
python/rsgislib/modelling/: species_distribution.py
python/rsgislib/rastergis/: __init__.py  ratutils.py
python/rsgislib/regression/: __init__.py  regress_sklearn.py  regresssklearn.py
python/rsgislib/sdm/: __init__.py  pysdm.py
python/rsgislib/segmentation/: __init__.py  segutils.py  shepherdseg.py  skimgseg.py  tiledclump.py  tiledsegsingle.py
python/rsgislib/timeseries/: __init__.py  modelfitting.py  robustfitoutliners.py  tmask.py
python/rsgislib/tools/: __init__.py  affine.py  checkdatasets.py  dropbox.py  filemanipulation.py  filetools.py  ftptools.py  geometrytools.py  google_cloud.py  googlecloud.py  httptools.py  imagetools.py  mapping.py  maths.py  msofficetools.py  notify_utils.py  plotting.py  projection.py  sensors.py  stats.py  sysprofile.py  test_images.py  testimages.py  tilecacheutils.py  utils.py  utm.py  validate_datasets.py  validatedatasets.py  visualisation.py  webtools.py  wmts_tools.py
python/rsgislib/vectorattrs/: __init__.py
python/rsgislib/vectorgeoms/: __init__.py
python/rsgislib/vectorstats/: __init__.py
python/rsgislib/vectorutils/: __init__.py  convertvector.py  createrasters.py  createvectors.py
python/rsgislib/zonalstats/: __init__.py
python/src/: classification.cpp  elevation.cpp  histocube.cpp  imagecalc.cpp  imagecalibration.cpp  imagefilter.cpp  imagemorphology.cpp  imageregistration.cpp  imageutils.cpp  rastergis.cpp  rsgispy_common.h  segmentation.cpp  specunmixing.cpp  vectorutils.cpp  zonalstats.cpp
python_tests/: test_changedetect_pxloutlierchng.py  test_classification.py  test_classification_classaccuracymetrics.py  test_classification_classcatboost.py  test_classification_classimblearn.py  test_classification_classlightgbm.py  test_classification_classratutils.py  test_classification_classsklearn.py  test_classification_classxgboost.py  test_classification_clustersklearn.py  test_elevation.py  test_elevation_roughness.py  test_image_morphology.py  test_imagecalc.py  test_imagecalc_calc_pt_win_smpls.py  test_imagecalc_calcindices.py  test_imagecalc_leastcostpath.py  test_imagecalc_specunmixing.py  test_imagefilter.py  test_imageregistration.py  test_imageutils.py  test_imageutils_imagelut.py  test_imageutils_stdimgblockiter.py  test_imageutils_stdimgblockiterbatches.py  test_rastergis.py  test_rastergis_ratutils.py  test_regression.py  test_regression_regresssklearn.py  test_rsgislib_cli.py  test_segentatation.py  test_segentatation_segutils.py  test_segentatation_shepherdseg.py  test_segentatation_skimgseg.py  test_segentatation_tiledclump.py  test_timeseries_modelfitting.py  test_tools_checkdatasets.py  test_tools_filetools.py  test_tools_ftptools.py  test_tools_geometrytools.py  test_tools_mapping.py  (+11 more)
share/: utm_zone_boundaries_lyrs_north.gpkg  utm_zone_boundaries_lyrs_south.gpkg
src/: CMakeLists.txt  rsgis-config.h.in
tools/: flip.cpp  gdalsimpleinfo.cpp  rsgis-config.bat.in  rsgis-config.in  rsgisapplycmd.bat.in  rsgisapplycmd.py.in  rsgisbatchconvert2cog.bat.in  rsgisbatchconvert2cog.py.in  rsgisbatchconvert2tif.bat.in  rsgisbatchconvert2tif.in  rsgisbatchconvert2tif.py.in  rsgisbuildimglut.bat.in  rsgisbuildimglut.py.in  rsgiscalcaccmatrix.bat.in  rsgiscalcaccmatrix.py.in  rsgiscalcimgstats.bat.in  rsgiscalcimgstats.py.in  rsgiscalcindices.py.in  rsgischkgdalfile.bat.in  rsgischkgdalfile.py.in  rsgiscmd.py.in  rsgiscmprefimgs.bat.in  rsgiscmprefimgs.py.in  rsgiscopybandnames.bat.in  rsgiscopybandnames.py.in  rsgiscreateptsvec.bat.in  rsgiscreateptsvec.py.in  rsgiscreatevrts.bat.in  rsgiscreatevrts.py.in  rsgisdbxupload.py.in  rsgisdwndem.py.in  rsgisfilehash.bat.in  rsgisfilehash.py.in  rsgisfilelut.bat.in  rsgisfilelut.py.in  rsgisimg2kmz.bat.in  rsgisimg2kmz.py.in  rsgisimg2webtiles.bat.in  rsgisimg2webtiles.py.in  rsgisimginfo.bat.in  (+31 more)
xml_standards/: input.xml.in
(+1462 files in other folders)
